[package]
name = "SynthVst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# add some dependencies here
vst = "0.3"
rand = "0.8"
fundsp = "0.9.0" #"0.3.1"
num-derive = "0.3"
num-traits = "0.2"
wmidi = "4"