[package]
name = "SynthVst"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.15"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
egui-baseview = { git = "https://github.com/BillyDM/egui-baseview" }
vst = { version = "0.2" }
raw-window-handle = "0.3"
log = "0.4"
simplelog = "0.11"
dirs = "4"
log-panics = "2"
# fundsp = { git = "https://github.com/SamiPerttu/fundsp" }
fundsp = "0.9.0" #"0.3.1"
# wmidi = { git = "https://github.com/RustAudio/wmidi" }
wmidi = "4"
num-derive = "0.3"
num-traits = "0.2"
